Add Orderbook Incremental Updates (L4 Market Data) (#16)
* Rename OrderbookTests to CoreOrderbookTests

* Add EventTime to Fills and Trades

* Move Limit, LimitComparer, and OrderbookEntry to OrdersCS

* Add SecurityConstants

* Add PriceCS

* Add OrderbookDataCS

* Add OrderbookDataCSTests

* Add Incremental Orderbook Update Creation on Match

* Add OrderbookDataCS, PriceCS, and OrderbookDataCSTests to Sln

* Simplify Test Code

* Add IsEmpty Property to Limit

* Replace HeadPointer != null with !limit.IsEmpty

* Clarify OrderbookData Test Names

* Pass Correct Orderbook Limit Based On Aggressor Side

* Only Increase Order Count for Non 0 Quantity Orders

* Utilize currentQuantity for adding to levelQuantity

* Add GetLevelOrderCount and GetLevelOrderQuantity to Limit

* Correct containsSingleOrder In CreateIncrementalOrderbookUpdate

* Add Side to Limit

And hence EntryType to IncrementalOrderbookUpdate

* Add IncrementalOrderbookUpdateEntry

* Replace OrderbookEntryData with OrderRecord

For our immutable orderbook meta data.

* Rename GetLevelOrderMetaData to GetLevelOrderRecords

* Rename orderMetaDatas as orderRecords

* Replace limit.IsEmpty with containsNoOrders

* Add TheoreticalQueuePosition to OrderRecord

* Add Comment to IsExternalInit

* Edit Readme to Include New Incremental Orderbook Update

* Add Trade Statistics Market Data (#18)

* Add SecurityStatistics

* Add TradeStatistics in OrderbookData

* Simplify Multiple Set Methods in SecurityStatistics with AcceptPrice

* Place ReadOnlyList Extension in List Namespace

Co-authored-by: Agorist-Action <agorist_action@protonmail.com>

Co-authored-by: Agorist-Action <agorist_action@protonmail.com>

--- a/src/OrderbookCS/OrderbookCS.csproj
+++ b/src/OrderbookCS/OrderbookCS.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -9,8 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ExtensionsCS\ExtensionsCS.csproj" />
     <ProjectReference Include="..\FillsCS\FillsCS.csproj" />
     <ProjectReference Include="..\InstrumentCS\InstrumentCS.csproj" />
+    <ProjectReference Include="..\OrderbookDataCS\OrderbookDataCS.csproj" />
     <ProjectReference Include="..\OrdersCS\OrdersCS.csproj" />
     <ProjectReference Include="..\TradesCS\TradesCS.csproj" />
   </ItemGroup>
