--- a/src/TradingEngine/appsettings.json
+++ b/src/TradingEngine/appsettings.json
@@ -11,5 +11,21 @@
         "OrderEntryServer": {
             "Port": "14000"
         }
+    },
+    "TradingExchangeConfiguration": {
+        "ExchangeId": 0,
+        "ExchangeName": "EDEN",
+        "Securities": [
+            {
+                "SecurityId": 0,
+                "Symbol": "AAPL",
+                "AllocationAlgorithm": "ProRata"
+            },
+            {
+                "SecurityId": 1,
+                "Symbol": "FB",
+                "AllocationAlgorithm": "Fifo"
+            }
+        ]
     }
 }
