Cj/trading server communicator (#22)
* Add TradingServer Frame

* Update ITradingUpdateProcessor to Return ExchangeResult

* Add ModifyOrderType

* Add ModifyOrder Reject Reasons

* Remove Statistic Tracking Orderbook

* Add Communicator

* Remove Clients List

* Change GetClients Interface

* Add Handle Methods

* Elide TTasks in Handle Methods

* Handle Unknown ExchangeInformationType

* Inherit IOrderStatus Interface from IOrderCore

* Add Server to TradingEngineServer

* Remove .Net.Client

* Remove TradingServerCS

Co-authored-by: Agorist-Action <agorist_action@protonmail.com>

--- a/src/TradingEngine/TradingEngine.csproj
+++ b/src/TradingEngine/TradingEngine.csproj
@@ -16,7 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ExchangeCS\ExchangeCS.csproj" />
     <ProjectReference Include="..\LoggingCS\LoggingCS.csproj" />
-    <ProjectReference Include="..\TradingServerCS\TradingServerCS.csproj" />
+    <ProjectReference Include="..\OrderEntryCommunicationCommonCS\OrderEntryCommunicationCS.csproj" />
   </ItemGroup>
 
   <ItemGroup>
