Cj/Move TradesCS and FillsCS into OrdersCS (#23)
* Remove FillsCS and TradesCS

* Get Rid of Fills Namespace

Co-authored-by: Agorist-Action <agorist_action@protonmail.com>

--- a/src/OrdersCS/OrdersCS.csproj
+++ b/src/OrdersCS/OrdersCS.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CommonCS\CommonCS.csproj" />
+    <ProjectReference Include="..\InstrumentCS\InstrumentCS.csproj" />
   </ItemGroup>
 
 </Project>
