--- a/src/TradingEngine/TradingEngine.csproj
+++ b/src/TradingEngine/TradingEngine.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\ExchangeCS\ExchangeCS.csproj" />
     <ProjectReference Include="..\LoggingCS\LoggingCS.csproj" />
     <ProjectReference Include="..\OrderEntryCommunicationCommonCS\OrderEntryCommunicationCS.csproj" />
+    <ProjectReference Include="..\OrdersCS\OrdersCS.csproj" />
   </ItemGroup>
 
   <ItemGroup>
