Cj/clean up existing code (#24)
* Remove Cloner

* Set Price in Limit Constructor

* Use OrderbookEntryIterator in Lifo and Fifo

* Refactor Proto and ProtoAdapter into Seperate Libraries

* Change CommunicationCS to CommunicationServerCS

* Pass OriginalClient Instead of Username to ProcessSubscribeRequestAsync

Co-authored-by: Agorist-Action <agorist_action@protonmail.com>

--- a/src/OrderbookCS/OrderbookCS.csproj
+++ b/src/OrderbookCS/OrderbookCS.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>TradingEngineServer.Orderbook</RootNamespace>
     <AssemblyName>TradingEngineServer.Orderbook</AssemblyName>
     <DisableTransitiveProjectReferences>true</DisableTransitiveProjectReferences>
+    <LangVersion>9</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
