Cj/clean up existing code (#29)
* Remove Cloner

* Set Price in Limit Constructor

* Use OrderbookEntryIterator in Lifo and Fifo

* Refactor Proto and ProtoAdapter into Seperate Libraries

* Change CommunicationCS to CommunicationServerCS

* Pass OriginalClient Instead of Username to ProcessSubscribeRequestAsync

* Rename CommunicationCommon to CommunicationServer

Co-authored-by: Agorist-Action <agorist_action@protonmail.com>

--- a/src/TradingEngine/TradingEngine.csproj
+++ b/src/TradingEngine/TradingEngine.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\ExchangeCS\ExchangeCS.csproj" />
     <ProjectReference Include="..\LoggingCS\LoggingCS.csproj" />
     <ProjectReference Include="..\OrderEntryCommunicationCommonCS\OrderEntryCommunicationServerCS.csproj" />
+    <ProjectReference Include="..\OrderEntryCommunicationServerCS\OrderEntryCommunicationServerCS.csproj" />
   </ItemGroup>
 
   <ItemGroup>
