--- a/src/OrderEntryProtoCS/OrderEntryProtoCS.csproj
+++ b/src/OrderEntryProtoCS/OrderEntryProtoCS.csproj
@@ -7,6 +7,10 @@
     <AssemblyName>TradingEngineServer.OrderEntryProto</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="OrderEntryCommunication.proto" />
+  </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="Google.Protobuf" Version="3.15.0" />
         <PackageReference Include="Grpc.Core" Version="2.39.1" />
@@ -14,6 +18,10 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Protobuf Include="OrderEntryCommunication.proto" />
     </ItemGroup>
 
 </Project>
